fix: spacing tweaks

--- a/web/src/components/Common/Feature/Feature.module.scss
+++ b/web/src/components/Common/Feature/Feature.module.scss
@@ -3,7 +3,7 @@
 
 .Feature {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
 }
 
 .ImageWrapper {
