--- a/web/src/components/Section/Features/Features.module.scss
+++ b/web/src/components/Section/Features/Features.module.scss
@@ -6,7 +6,7 @@
 }
 
 .FeatureWrapper {
-  margin: spacing(5) 0 spacing(10);
+  margin: spacing(5) 0 spacing(6);
 
   &.last {
     margin-bottom: spacing(8);
